Content/images, GuestIndex, BundleConfig,favicon

--- a/HotelesPuraVida/HotelesPuraVida/HotelesPuraVida.csproj
+++ b/HotelesPuraVida/HotelesPuraVida/HotelesPuraVida.csproj
@@ -25,6 +25,7 @@
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
     <TargetFrameworkProfile />
+    <WebGreaseLibPath>..\packages\WebGrease.1.5.2\lib</WebGreaseLibPath>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -44,6 +45,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="Antlr3.Runtime, Version=3.4.1.9004, Culture=neutral, PublicKeyToken=eb42632606e9261f, processorArchitecture=MSIL">
+      <HintPath>..\packages\Antlr.3.4.1.9004\lib\Antlr3.Runtime.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
       <Private>True</Private>
@@ -85,6 +90,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=4.5.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.5.0.4\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -93,10 +102,18 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Optimization, Version=1.1.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.Web.Optimization.1.1.3\lib\net40\System.Web.Optimization.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Web.Services" />
     <Reference Include="System.EnterpriseServices" />
+    <Reference Include="WebGrease, Version=1.5.2.14234, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\WebGrease.1.5.2\lib\WebGrease.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="System.Web.Razor">
@@ -124,7 +141,34 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\Images\attended.png" />
+    <Content Include="Content\Images\GuestHome.png" />
+    <Content Include="Content\Images\HotelBrands\Canopy.png" />
+    <Content Include="Content\Images\HotelBrands\Conrad.png" />
+    <Content Include="Content\Images\HotelBrands\Curio.png" />
+    <Content Include="Content\Images\HotelBrands\DoubleTree.png" />
+    <Content Include="Content\Images\HotelBrands\Embassy.png" />
+    <Content Include="Content\Images\HotelBrands\GardenInn.png" />
+    <Content Include="Content\Images\HotelBrands\GrandVacations.png" />
+    <Content Include="Content\Images\HotelBrands\Hampton.png" />
+    <Content Include="Content\Images\HotelBrands\HHonors.png" />
+    <Content Include="Content\Images\HotelBrands\Hilton.png" />
+    <Content Include="Content\Images\HotelBrands\Home2.png" />
+    <Content Include="Content\Images\HotelBrands\Homewood.png" />
+    <Content Include="Content\Images\HotelBrands\Tru.png" />
+    <Content Include="Content\Images\HotelBrands\Waldorf.png" />
+    <Content Include="Content\Images\HotelsBanner.png" />
+    <Content Include="Content\Images\LeftLogo.png" />
+    <Content Include="Content\Images\Logo.png" />
+    <Content Include="Content\Images\Socials\fb2.png" />
+    <Content Include="Content\Images\Socials\gp.png" />
+    <Content Include="Content\Images\Socials\linkein.png" />
+    <Content Include="Content\Images\Socials\pinterest.png" />
+    <Content Include="Content\Images\Socials\skype.png" />
+    <Content Include="Content\Images\Socials\twitter2.png" />
+    <Content Include="Content\Images\Socials\yt.png" />
     <Content Include="Content\Site.css" />
+    <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
@@ -135,9 +179,11 @@
     <Content Include="scripts\jquery-1.10.2.js" />
     <Content Include="scripts\jquery-1.10.2.min.js" />
     <Content Include="scripts\modernizr-2.6.2.js" />
+    <None Include="Views\Home\GuestIndex.cshtml" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Global.asax.cs">
@@ -157,7 +203,6 @@
     </Content>
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\Home.cshtml" />
     <Content Include="fonts\glyphicons-halflings-regular.woff" />
     <Content Include="fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
