--- a/HotelesPuraVida/HotelesPuraVida/HotelesPuraVida.csproj
+++ b/HotelesPuraVida/HotelesPuraVida/HotelesPuraVida.csproj
@@ -139,6 +139,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Content\animate.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\Images\attended.png" />
